--- a/PW/Pogram2/lab2a.html
+++ b/PW/Pogram2/lab2a.html
@@ -20,7 +20,7 @@ the alert windows must be produced when errors are detected.
 		<script type="text/javascript">
 			function ValidateUsn() {
 				var usn = document.getElementById('usn').value;
-				if(usn.match(/[1-4][A-Z][A-Z][0-1][1-9][A-Z][A-Z][0-9][0-9][0-9]/)) {
+				if(usn.match(/^[1-4][A-Z][A-Z][0-1][1-9][A-Z][A-Z][0-9][0-9][0-9]$/)) {
 					alert("The Entered USN is valid");
 				} else {
 					alert("Wrong USN yo!");
